test: add IncidentQueryControllerTest
Related with #20661